syntax = "proto3";

option csharp_namespace = "TH.AuthMS.Grpc";

// The greeting service definition.
service AuthProtoService {
  // Sends a greeting
  rpc SignUp (SignUpInputRequest) returns (SignUpViewReply);
}

message SignUpInputRequest {	
	string name = 1;
	string user_name = 2;
	string password = 3;
	string email = 4;
	string referral_id = 5;
	string company_name = 6;
	bool is_auto_user_name = 7;
}

message SignUpViewReply {	
	string name = 1;
	string user_name = 2;
	string email = 3;
}