syntax = "proto3";

option csharp_namespace = "TH.CompanyMS.API.Protos";

service CompanyProtoService{
	rpc SaveAuthUser(SignUpRequest) returns (SignUpReply);
}

message SignUpRequest {
	string name = 1;
	string password = 2;
	string Email = 3;
}

message SignUpReply {
	string name = 1;
	string user_name = 2;
	string Email = 3;
}